# market-mind

./: .env.example  .gitignore  I want to build an ai agent in this proj.md  README.md  docker-compose.yml  market-mind-ingress.yaml
.devcontainer/: devcontainer.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  chats.py  health.py
backend/app/core/: __init__.py  config.py  logging.py  rate_limiter.py
backend/app/db/: session.py
backend/app/models/: __init__.py  agent_response.py  agent_state.py  chat.py
backend/app/prompts/: __init__.py  chat.py  title.py
backend/app/repositories/: __init__.py  chat.py
backend/app/schemas/: __init__.py  chat.py  health.py
backend/app/scripts/: __init__.py  purge_chats.py
backend/app/services/: __init__.py  agent.py
backend/app/tests/: test_rate_limiter.py  test_routes.py
charts/backend/: Chart.yaml  values.yaml
charts/backend/templates/: _helpers.tpl  chroma.yaml  cleanup-cronjob.yaml  configmap.yaml  deployment.yaml  ingress.yaml  postgres.yaml  pvc.yaml  secret.yaml  service.yaml
charts/frontend/: Chart.yaml  values.yaml
charts/frontend/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
data/: market_mind.db
docs/: deployment.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: ChatWindow.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  user.ts
frontend/src/prompts/: chatPrompts.ts
frontend/src/store/: chatStore.test.ts  chatStore.ts
frontend/src/types/: chat.ts
