[project]
name = "market-mind-backend"
version = "0.1.0"
description = "Backend service for Market Mind AI agent."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.29",
    "psycopg[binary,pool]>=3.1.18",
    "alembic>=1.13.1",
    "langchain>=0.1.19",
    "langchain-community>=0.0.38",
    "langchain-openai>=0.1.6",
    "langgraph>=0.0.57",
    "duckduckgo-search>=5.2.2",
    "chromadb>=0.4.24",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "cachetools>=5.3.3",
    "langfuse>=2.30.1",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.14.0",
]

[tool.uv]
dev-dependencies = ["market-mind-backend[test]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-s"
